--- a/public/global.css
+++ b/public/global.css
@@ -15,6 +15,7 @@ body {
 
   --github-color: #282538;
   --optional-color: #b9bdcf;
+  --not-found-color: #f2f2f2;
 
   --aux-primary-color: #ffffff;
   --aux-secondary-color: #f6f7fb;
@@ -50,4 +51,8 @@ body {
 
   color: var(--optional-color);
   font-weight: 500;
+}
+
+a {
+  text-decoration: none;
 }
