--- a/public/global.css
+++ b/public/global.css
@@ -43,10 +43,17 @@ body.dark {
 }
 
 body {
+  font-size: 16px;
   background: var(--aux-secondary-color);
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 12px;
+  }
 }
